--- a/credits.html
+++ b/credits.html
@@ -32,13 +32,13 @@
 	<h3>Xabier Jimenez</h3>
 	Specialized in <b></b><br>
 	<img src='images/'><br>
-	From <b>
+	From <b> </b>
 	</div>
 	
 	<div>
 	<h3>Endika Trecu</h3>
 	Specialized in <b>Software Engineering</b><br>
-	<img src='images/'><br>
+	<img src='images/1.jpg' width="200"><br>
 	From <b>Andoain
 	</div>
 	
