--- a/credits.html
+++ b/credits.html
@@ -30,9 +30,9 @@
     
 	<div>
 	<h3>Xabier Jimenez</h3>
-	Specialized in <b></b><br>
-	<img src='images/'><br>
-	From <b> </b>
+	Specialized in <b>Software Engineering</b><br>
+	<img src='images/2.jpg' width="200"><br>
+	From <b>Donostia </b>
 	</div>
 	
 	<div>
