--- a/addQuestion.html
+++ b/addQuestion.html
@@ -42,7 +42,7 @@
 					}
 					
 				} else {
-				alert(Val);
+				alert("Enter a valid ikasle.ehu.eus domain email");
 				e.preventDefault();
 				}
 			
