--- a/layout.html
+++ b/layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
 	<title>Quizzes</title>
-    <link rel='stylesheet' type='text/css' href='styles/style.css' />
+    <link rel='stylesheet' type='text/css' href='style/style.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
 		   media='only screen and (min-width: 530px) and (min-device-width: 481px)'
