--- a/addQuestion.html
+++ b/addQuestion.html
@@ -69,7 +69,7 @@
 	</nav>
     <section class="main" id="s1">
 	
-		<form id="galderenF" name="galderenF" action="proba.php" >
+		<form id="galderenF" name="galderenF" action="php\proba.php" method="post">
 	
 			Submitter Email:(*) <br>
 			<input name="mail" id="mail" type="text" required></input> <br>
@@ -97,7 +97,7 @@
 			
 			(Fields marked as (*) are mandatory) <br>
 	
-			<input type="submit" id="bttn"></input> <input type="reset" id="rstbttn"></input> <br>
+			<input type="submit" id="bttn" name="sbmitBttn" value="Submit"></input> <input type="reset" id="rstbttn"></input> <br>
 		
 	</form>
     </section>
