DB insert works locally

--- a/addQuestion.html
+++ b/addQuestion.html
@@ -69,7 +69,7 @@
 	</nav>
     <section class="main" id="s1">
 	
-		<form id="galderenF" name="galderenF" action="php\proba.php" method="post">
+		<form id="galderenF" name="galderenF" action="http:\\localhost\wsra\php\addQuestion.php" method="post">
 	
 			Submitter Email:(*) <br>
 			<input name="mail" id="mail" type="text" required></input> <br>
