Fixes, and database works locally.

--- a/layout.html
+++ b/layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
 	<title>Quizzes</title>
-    <link rel='stylesheet' type='text/css' href='style/style.css' />
+    <link rel='stylesheet' type='text/css' href='styles/style.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
 		   media='only screen and (min-width: 530px) and (min-device-width: 481px)'
@@ -25,6 +25,7 @@
 		<span><a href='/quizzes'>Quizzes</a></span>
 		<span><a href='credits.html'>Credits</a></span>
 		<span><a href='addQuestion.html'>Add a question</a></span>
+		<span><a href='addQuestion5.html'>Add a question (HTML 5)</a></span>
 	</nav>
     <section class="main" id="s1">
     
