addQuestion.php now replaces both html. regex check in server side

--- a/credits.html
+++ b/credits.html
@@ -24,8 +24,8 @@
 		<span><a href='layout.html'>Home</a></span>
 		<span><a href='/quizzes'>Quizzes</a></span>
 		<span><a href='credits.html'>Credits</a></span>
-		<span><a href='addQuestion.html'>Add a question</a></span>
-		<span><a href='addQuestion5.html'>Add a question (HTML 5)</a></span>
+		<span><a href='http:\\localhost\project\php\addQuestion.php'>Add a question</a></span>
+		<span><a href='http:\\localhost\project\php\ShowQuestions.php'>See the questions</a></span>
 	</nav>
     <section class="main" id="s1">
     
